# SelectionMaid

./: .gitignore  CLAUDE.md  README.md  config.toml  pyproject.toml
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/commands/gsd/: add-tests.md  ai-integration-phase.md  audit-fix.md  audit-milestone.md  audit-uat.md  autonomous.md  capture.md  cleanup.md  code-review.md  complete-milestone.md  config.md  debug.md  discuss-phase.md  docs-update.md  eval-review.md  execute-phase.md  explore.md  extract-learnings.md  fast.md  forensics.md  graphify.md  health.md  help.md  import.md  inbox.md  ingest-docs.md  manager.md  map-codebase.md  milestone-summary.md  mvp-phase.md  new-milestone.md  new-project.md  pause-work.md  phase.md  plan-phase.md  plan-review-convergence.md  pr-branch.md  profile-user.md  progress.md  quick.md  (+19 more)
.claude/get-shit-done/references/: artifact-types.md  context-budget.md  model-profile-resolution.md  planner-mvp-mode.md  verification-patterns.md
.claude/get-shit-done/templates/: phase-prompt.md
.claude/get-shit-done/workflows/: ai-integration-phase.md  autonomous.md  complete-milestone.md  discovery-phase.md  discuss-phase-assumptions.md  discuss-phase.md  eval-review.md  execute-phase.md  execute-plan.md  explore.md  health.md  help.md  ingest-docs.md  mvp-phase.md  new-milestone.md  (+19 more)
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  GETTING-STARTED.md  TESTING.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: App.spec.ts  App.vue  style.css
src/selection_maid/: __init__.py  config.py  errors.py  service.py
tests/: conftest.py  test_config.py  test_memory_regression.py
tests/domain/: test_models.py  test_service.py
tests/fixtures/: generate_adversarial.py
tests/stubs/: __init__.py  adapters.py
(+263 files in other folders)
